--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-R53_ZONE_NAME=
-R53_DOMAIN_NAME=
-ACM_CERT_ARN=
+R53_ZONE_NAME=dev.smartpaxonline.com
+R53_DOMAIN_NAME=auth.dev.smartpaxonline.com
+ACM_CERT_ARN=arn:aws:acm:af-south-1:323800856986:certificate/0bbcbb75-0c7b-4b1d-b2c5-4533b00ff88f
